testsuite/tests/linear/should_fail/Linear5.stderr

Linear5.hs:7:20: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘n’ with actual multiplicity ‘'Omega’
    • In an equation for ‘incorrectEqn’: incorrectEqn False n = 0
